--- a/anexos/anexo.tex
+++ b/anexos/anexo.tex
@@ -39,7 +39,7 @@
 			%\centering
 			\small
 			\tabularnewline \specialrule{.1em}{.05em}{.05em}
-			\centering{Título de la tesis} & \multicolumn{6}{p{15cm}}{Diseño de un modelo de Deep Learning para el pre-diagnóstico de nódulos tiroideos a través de imágenes de ultrasonido}
+			\centering{Título de la tesis} & \multicolumn{6}{p{15cm}}{Propuesta de modelo de clasificación automatizada de deterioros en pavimentos de Lima Metropolitana, Perú utilizando Redes Neuronales Convolucionales}
 			\tabularnewline \specialrule{.1em}{.05em}{.05em}
 			\Centering{Problema General}& \Centering{Objetivo General} & \Centering{Hipótesis General} & \Centering{Variables} & \Centering{Método} \\
 			\specialrule{.1em}{.05em}{.05em}
