--- a/biblio/references.bib
+++ b/biblio/references.bib
@@ -15,6 +15,9 @@
 %%%papers
 %%%%%%%%%
 
+
+
+
 @article{pr_gong2022ACL,
 	title = {Less is More: Adaptive Curriculum Learning for Thyroid Nodule Diagnosis},
 	author = {Gong, Haifan and Cheng, Hui and Xie, Yifan and Tan, Shuangyi and Chen, Guanqi and Chen, Fei and Li, Guanbin},
@@ -375,6 +378,23 @@
 
 %%% Mis antecedentes
 
+@Article{s22072455,
+AUTHOR = {Chen, Guo-Hong and Ni, Jie and Chen, Zhuo and Huang, Hao and Sun, Yun-Lei and Ip, Wai Hung and Yung, Kai Leung},
+TITLE = {Detection of Highway Pavement Damage Based on a CNN Using Grayscale and HOG Features},
+JOURNAL = {Sensors},
+VOLUME = {22},
+YEAR = {2022},
+NUMBER = {7},
+ARTICLE-NUMBER = {2455},
+URL = {https://www.mdpi.com/1424-8220/22/7/2455},
+PubMedID = {35408070},
+ISSN = {1424-8220},
+ABSTRACT = {Aiming at the demand for rapid detection of highway pavement damage, many deep learning methods based on convolutional neural networks (CNNs) have been developed. However, CNN methods with raw image data require a high-performance hardware configuration and cost machine time. To reduce machine time and to apply the detection methods in common scenarios, the CNN structure with preprocessed image data needs to be simplified. In this work, a detection method based on a CNN and the combination of the grayscale and histogram of oriented gradients (HOG) features is proposed. First, the Gamma correction was employed to highlight the grayscale distribution of the damage area, which compresses the space of normal pavement. The preprocessed image was then divided into several unit cells, whose grayscale and HOG were calculated, respectively. The grayscale and HOG of each unit cell were combined to construct the grayscale-weighted HOG (GHOG) feature patterns. These feature patterns were input to the CNN with a specific structure and parameters. The trained indices suggested that the performance of the GHOG-based method was significantly improved, compared with the traditional HOG-based method. Furthermore, the GHOG-feature-based CNN technique exhibited flexibility and effectiveness under the same accuracy, in comparison to those deep learning techniques that directly deal with raw data. Since the grayscale has a definite physical meaning, the present detection method possesses a potential application for the further detection of damage details in the future.},
+DOI = {10.3390/s22072455}
+}
+
+
+
 @article{DU2021109900,
 title = {Application of image technology on pavement distress detection: A review},
 journal = {Measurement},
@@ -454,3 +474,41 @@ abstract = {Digital image processing technology has been widely applied in vario
 	volume = {11},
 	year = {2024},
 	bdsk-url-1 = {https://doi.org/10.1038/s41597-024-03263-7}}
+
+
+@ARTICLE{9451544,
+  author={Li, Zewen and Liu, Fan and Yang, Wenjie and Peng, Shouheng and Zhou, Jun},
+  journal={IEEE Transactions on Neural Networks and Learning Systems}, 
+  title={A Survey of Convolutional Neural Networks: Analysis, Applications, and Prospects}, 
+  year={2022},
+  volume={33},
+  number={12},
+  pages={6999-7019},
+  keywords={Convolutional neural networks;Feature extraction;Neurons;Deep learning;Computer vision;Computer vision;convolutional neural networks (CNNs);deep learning;deep neural networks},
+  doi={10.1109/TNNLS.2021.3084827}}
+
+
+
+@Article{app13095521,
+AUTHOR = {Maurício, José and Domingues, Inês and Bernardino, Jorge},
+TITLE = {Comparing Vision Transformers and Convolutional Neural Networks for Image Classification: A Literature Review},
+JOURNAL = {Applied Sciences},
+VOLUME = {13},
+YEAR = {2023},
+NUMBER = {9},
+ARTICLE-NUMBER = {5521},
+URL = {https://www.mdpi.com/2076-3417/13/9/5521},
+ISSN = {2076-3417},
+ABSTRACT = {Transformers are models that implement a mechanism of self-attention, individually weighting the importance of each part of the input data. Their use in image classification tasks is still somewhat limited since researchers have so far chosen Convolutional Neural Networks for image classification and transformers were more targeted to Natural Language Processing (NLP) tasks. Therefore, this paper presents a literature review that shows the differences between Vision Transformers (ViT) and Convolutional Neural Networks. The state of the art that used the two architectures for image classification was reviewed and an attempt was made to understand what factors may influence the performance of the two deep learning architectures based on the datasets used, image size, number of target classes (for the classification problems), hardware, and evaluated architectures and top results. The objective of this work is to identify which of the architectures is the best for image classification and under what conditions. This paper also describes the importance of the Multi-Head Attention mechanism for improving the performance of ViT in image classification.},
+DOI = {10.3390/app13095521}
+}
+
+@misc{yunusa2024exploringsynergieshybridcnns,
+      title={Exploring the Synergies of Hybrid CNNs and ViTs Architectures for Computer Vision: A survey}, 
+      author={Haruna Yunusa and Shiyin Qin and Abdulrahman Hamman Adama Chukkol and Abdulganiyu Abdu Yusuf and Isah Bello and Adamu Lawan},
+      year={2024},
+      eprint={2402.02941},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2402.02941}, 
+}
