--- a/tesis.tex
+++ b/tesis.tex
@@ -135,7 +135,8 @@ pdfauthor={autor nombres}]{hyperref}
 	\fancyhead[R]{\thepage}}
 %%Encabezados con titulo de tesis y numero de pagina
 \fancypagestyle{special}{%
-	\fancyhead[L]{\changefont Diseño de un modelo de Deep Learning para el pre-diagnóstico de nódulos tiroideos a través de imágenes de ultrasonido}
+	\fancyhead[L]{\changefont Propuesta de modelo de clasificación automatizada de deterioros en pavimentos de Lima
+	Metropolitana, Perú utilizando Redes Neuronales Convolucionales}
 	\fancyhead[R]{\thepage}}
 
 
